--- a/app/src/main/res/layout/activity_templates_screen.xml
+++ b/app/src/main/res/layout/activity_templates_screen.xml
@@ -6,7 +6,85 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.comp3717.comp3717markulate.templatesScreen">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/fullLayout">
 
+        <!--EditText box for entering the course-->
+        <LinearLayout
+            android:id="@+id/templates_course_editButton_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_course"
+                android:text="Random Course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"/>
+            <Button
+                android:id="@+id/templates_editBtn_course"
+                android:text="Edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick=""
+                android:singleLine="true" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom = "true">
+
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="0.13"
+
+        android:id="@+id/controlLayout">
+
+        <!--add button to add a course-->
+        <Button
+
+            android:text="@string/button_add_course"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_gravity="center_vertical"
+            android:onClick="add_course_details"/>
+
+        <Button
+            android:text="@string/button_delete_course"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:text="@string/button_import_course"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_vertical"
+            android:onClick="import_course" />
+        <Button
+            android:text="@string/button_export_course"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_vertical"
+            android:onClick="export_course" />
+    </LinearLayout>
+
+    </RelativeLayout>
 </RelativeLayout>
