--- a/app/src/main/res/layout/activity_course_details_screen.xml
+++ b/app/src/main/res/layout/activity_course_details_screen.xml
@@ -1,12 +1,155 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.comp3717.comp3717markulate.courseDetailsScreen">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity = "center_horizontal"
+    android:layout_weight="2"
+    android:layout_marginRight="30dp"
+    android:layout_marginLeft="30dp">
 
-</RelativeLayout>
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+
+        >
+
+        <TableRow
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="15dp">
+
+            <TextView
+                android:id="@+id/course_name_label"
+                android:text="@string/course_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+
+                />
+            <EditText
+                android:id="@+id/course_name"
+                android:hint="@string/course_name"
+                android:layout_weight="1"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+
+                />
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+            <TextView
+                android:id="@+id/category_label"
+                android:text="@string/category_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner"
+                android:layout_column="1"
+/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+            <TextView
+                android:id="@+id/item_name_label"
+                android:text="@string/item_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+
+                />
+
+            <EditText
+                android:id="@+id/item_name"
+                android:hint="@string/item_name"
+                android:layout_weight="1"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+
+                />
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+            <TextView
+                android:id="@+id/category_weight_label"
+                android:text="@string/category_weight_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                />
+
+            <EditText
+                android:id="@+id/category_weight"
+                android:hint="@string/category_weight"
+                android:layout_weight="1"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+
+                />
+
+        </TableRow>
+
+    </TableLayout>
+
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+
+        >
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            >
+            <Button
+                android:text="@string/btn_add_new_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight = "1"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="5dp"
+            >
+
+            <Button
+                android:text="@string/btn_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_gravity="bottom"
+                android:layout_weight = "1"
+/>
+            <Button
+                android:text="@string/btn_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+
+                android:layout_gravity="bottom"
+                android:layout_weight = "1"
+
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
+
