--- a/app/src/main/res/layout/activity_course_details_screen.xml
+++ b/app/src/main/res/layout/activity_course_details_screen.xml
@@ -1,7 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     android:layout_gravity = "center_horizontal"
     android:layout_weight="2"
@@ -12,12 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-
         >
 
         <TableRow
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="15dp">
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="20dp">
 
             <TextView
                 android:id="@+id/course_name_label"
@@ -25,7 +23,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-
                 />
             <EditText
                 android:id="@+id/course_name"
@@ -37,35 +34,45 @@
                 />
         </TableRow>
 
-        <TableRow
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp">
-            <TextView
-                android:id="@+id/category_label"
-                android:text="@string/category_label"
+        <TableRow>
+            <Button
+                android:text="@string/btn_add_new_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                />
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinner"
-                android:layout_column="1"
-/>
+                android:layout_gravity="top"
+                android:layout_weight = "1"/>
 
         </TableRow>
 
         <TableRow
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp">
+            >
+            <TextView
+                android:id="@+id/category_label"
+                android:text="@string/category_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+            />
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner"
+                android:layout_column="1"
+                android:layout_marginRight="15dp"
+            />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="15dp">
+
             <TextView
                 android:id="@+id/item_name_label"
                 android:text="@string/item_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:layout_marginLeft="20dp"
 
                 />
 
@@ -75,7 +82,7 @@
                 android:layout_weight="1"
                 android:layout_width = "match_parent"
                 android:layout_height="wrap_content"
-
+                android:layout_marginRight="15dp"
                 />
         </TableRow>
 
@@ -87,7 +94,7 @@
                 android:text="@string/category_weight_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:layout_marginLeft="20dp"
                 />
 
             <EditText
@@ -96,47 +103,21 @@
                 android:layout_weight="1"
                 android:layout_width = "match_parent"
                 android:layout_height="wrap_content"
-
+                android:layout_marginRight="15dp"
                 />
 
         </TableRow>
 
-    </TableLayout>
 
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-
-        >
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            >
-            <Button
-                android:text="@string/btn_add_new_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight = "1"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="5dp"
-            >
-
+        <TableRow
+            android:layout_marginTop="30dp">
             <Button
                 android:text="@string/btn_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_gravity="bottom"
                 android:layout_weight = "1"
-/>
+
+                />
             <Button
                 android:text="@string/btn_cancel"
                 android:layout_width="wrap_content"
@@ -146,9 +127,13 @@
                 android:layout_weight = "1"
 
                 />
-        </LinearLayout>
 
-    </LinearLayout>
+        </TableRow>
+
+    </TableLayout>
+
+
+
 
 
 </LinearLayout>
