--- a/app/src/main/res/layout/activity_course_details_screen.xml
+++ b/app/src/main/res/layout/activity_course_details_screen.xml
@@ -37,12 +37,12 @@
 
         <TableRow>
             <Button
-                android:text="@string/btn_add_new_item"
+                android:text="@string/btn_new_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:layout_weight = "1"
-                android:onClick="addNewItem"/>
+                android:onClick="newItem"/>
 
         </TableRow>
 
@@ -111,6 +111,16 @@
         </TableRow>
 
 
+        <TableRow>
+            <Button
+                android:text="@string/btn_add_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight = "1"
+                android:onClick="addItem"/>
+
+        </TableRow>
         <TableRow
             android:layout_marginTop="30dp">
             <Button
